# pixee

./: .gitignore  .gitmodules  CMakeLists.txt
Core/: CMakeLists.txt
Core/src/: application.cpp  application.hpp  core.hpp  layer.cpp  layer.hpp  time.hpp  utils.hpp  window.cpp  window.hpp
Core/src/event/: event.hpp  key_events.hpp  mouse_events.hpp
Pixee/: CMakeLists.txt
Pixee/src/: main.cpp  utils.hpp
Pixee/src/canvas/: canvas.cpp  canvas.hpp
Pixee/src/graphics/: checker_texture.cpp  checker_texture.hpp
Pixee/src/layers/: editor_layer.cpp  editor_layer.hpp  layers.hpp  overlay_layer.cpp  overlay_layer.hpp  ui_layer.cpp  ui_layer.hpp
Pixee/src/tool/: bucket_fill_tool.cpp  bucket_fill_tool.hpp  color_picker_tool.cpp  color_picker_tool.hpp  eraser_tool.cpp  eraser_tool.hpp  pen_tool.cpp  pen_tool.hpp  rect_tool.cpp  rect_tool.hpp  tool.cpp  tool.hpp  tools.hpp
Pixee/src/ui/: color_picker_panel.cpp  color_picker_panel.hpp  menu_bar.cpp  menu_bar.hpp  tools_panel.cpp  tools_panel.hpp
Pixee/src/ui/modal/: modal.cpp  modal.hpp  new_canvas_modal.cpp  new_canvas_modal.hpp
